# textclean

./: .gitignore
.github/workflows/: npm-publish.yml
core/js/: package-lock.json  package.json
core/js/src/: index.js  index.test.js
core/python/: README.md  pyproject.toml
core/python/tests/: test_core.py
core/python/texclean/: __init__.py  cli.py
