[project]
name = "texclean"
version = "0.1.0"
description = "A robust text cleaning library for Python"
readme = "README.md"
authors = [{name = "Aditio"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/aditioagungnugroho/texclean"
Repository = "https://github.com/aditioagungnugroho/texclean"

[project.scripts]
texclean = "texclean.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
